# SMPL-final-project

./: .gitignore  CMakeLists.txt  README.md
exec/: CMakeLists.txt  run.cpp
include/: Emit.hpp  Graphiz.hpp  Instruction.hpp  Parser.hpp
lib/: CMakeLists.txt  Emit.cpp  Graphiz.cpp  Instruction.cpp  Parser.cpp
test/: CMakeLists.txt  helper.hpp  test_parser.cpp
testcode/: 1dArray.txt  compilerText.txt  if_in_while.txt  mul_and_div.txt  neseted_if2.txt  nested_while.txt  public_test1.txt  public_test2.txt  returned_function.txt  returned_function_with_parameters.txt  simple_function.txt  test0.txt  test1.txt  test11.txt  test12.txt  test13.txt  test15.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test9.txt  while_in_if.txt
